apps/glitchtip/deployment-default-glitchtip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: glitchtip
  name: glitchtip
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: glitchtip
      managed-by: terraform
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: glitchtip
        managed-by: terraform
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: GLITCHTIP_DOMAIN
          value: https://glitchtip.brmartin.co.uk
        - name: ALLOWED_HOSTS
          value: glitchtip.brmartin.co.uk
        - name: CSRF_TRUSTED_ORIGINS
          value: https://glitchtip.brmartin.co.uk
        - name: GLITCHTIP_EMBED_WORKER
          value: 'true'
        - name: SKIP_INIT
          value: 'true'
        - name: VALKEY_URL
          value: redis://valkey.default.svc.cluster.local:6379/0
        - name: ENABLE_USER_REGISTRATION
          value: 'false'
        - name: ENABLE_SOCIAL_APPS_USER_REGISTRATION
          value: 'true'
        - name: LOG_LEVEL
          value: INFO
        - name: GLITCHTIP_ENABLE_MCP
          value: 'true'
        image: glitchtip/glitchtip:6.1.5
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: glitchtip.brmartin.co.uk
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: glitchtip
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            httpHeaders:
            - name: Host
              value: glitchtip.brmartin.co.uk
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /code/uploads
          mountPropagation: None
          name: uploads
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 5000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: glitchtip-uploads
