apps/glitchtip/service-default-glitchtip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: glitchtip
  name: glitchtip
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: glitchtip
    managed-by: terraform
  sessionAffinity: None
  type: ClusterIP
