apps/glitchtip/ingress-default-glitchtip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: glitchtip
  name: glitchtip
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: glitchtip.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: glitchtip
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - glitchtip.brmartin.co.uk
    secretName: wildcard-brmartin-tls
